# PR-ComfyUI-DreamWaltz-G-469cfd59

./: .gitignore  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
configs/: __init__.py  paths.py
core/: trainer.py
core/human/: smpl_condition.py  smpl_prompt.py  smpl_renderer.py  smpl_utils.py
core/nerf/: nerf_model.py  to_point_cloud.py
core/nerf/freqencoder/: backend.py
core/nerf/gridencoder/: backend.py
core/nerf/raymarching/rgb/: backend.py
core/system/: avatar.py
data/human/: motionx_reenact.py
human_body_prior/tools/: model_loader.py
pre_built/: diff_gaussian_rasterization-0.0.0-cp311-cp311-win_amd64.whl  nvdiffrast-0.3.3-py3-none-any.whl  simple_knn-0.0.0-cp311-cp311-win_amd64.whl
